# oneproject

./: .env copy  .gitignore  Dockerfile.prod  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py  shedule.py  start.py
app/: Dockerfile  api.py  config.py  main.py  models.py  prediction_endpoint.py  utils.py
data/predictions/: .gitkeep
data/processed/: .gitignore  data.csv  data_cleaned.csv  data_featured.csv  test.csv  train.csv
data/raw/: .gitignore  data.csv  data.xlsx
docker/: .env_example  docker-compose.yml
docker/mlflow_image/: Dockerfile
front/: .gitignore  Dockerfile  main.py  requirements.txt  utils.py
mlflow/: .env_example  Dockerfile  docker-compose.yml
models/: .gitignore
notebooks/: Time_series_Vkus.ipynb
reports/: .gitignore
sheduler/: Dockerfile
src/: __init__.py
src/data/: clean_data.py  get_data.py  prepare_datasets.py
src/features/: add_features.py
src/models/: predict.py  train.py  upload_model.py
