[tool.poetry]
name = "forecaster"
version = "0.1.0"
description = "A simple package to wrap some forecasting functionality"
authors = ["Dim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
click = "^8.1.7"
dvc = {extras = ["s3"], version = "^3.28.0"}
openpyxl = "^3.1.2"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
mlflow = "^2.8.0"
fastapi = "^0.104.1"
streamlit = "^1.28.1"
s3fs = "^2023.10.0"
st-files-connection = "^0.1.0"
gunicorn = "^21.2.0"
schedule = "^1.2.1"
load-dotenv = "^0.1.0"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
holidays = "^0.36"
sphinx = "^7.2.6"
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
